[workspace]
members = [
    "crates/yellowstone-block-machine",
    "examples/dragonsmouth",
]
resolver = "2"

[workspace.package]
authors = ["Triton One"]
edition = "2024"
homepage = "https://triton.one"
repository = "https://github.com/rpcpool/yellowstone-block-machine"
license = "AGPL-3.0"
keywords = ["solana", "rpc", "block", "machine", "yellowstone"]
publish = false

[workspace.dependencies]
bytesize = "2"
bytesize-serde = "^0.2"
clap = "4"
common_macros = "^0.1.1"
derive_more = "2"
futures-util = "^0.3.31"
rustc-hash = "2"
serde = "1"
serde_yaml = "^0.9.34"
solana-clock = "2"
solana-commitment-config = "2"
solana-pubkey = "2"
solana-signature = "2"
solana-hash = "2"
thiserror = "2"
tokio = "1"
tokio-stream = "^0.1.17"
tokio-util = "^0.7.16"
tonic = "^0.14.1"
tracing = "^0.1.41"
tracing-subscriber = "^0.3.19"
yellowstone-grpc-client = { version = "9" }
yellowstone-grpc-proto = { version = "9" }
yellowstone-block-machine = { path = "crates/yellowstone-block-machine" }