[workspace]
members = [
    "crates/yellowstone-block-machine",
    "examples/dragonsmouth",
]
resolver = "2"

[workspace.package]
authors = ["Triton One"]
edition = "2024"
homepage = "https://triton.one"
repository = "https://github.com/rpcpool/yellowstone-block-machine"
keywords = ["solana", "rpc", "block", "sans-io", "yellowstone", "geyser"]
license = "AGPL-3.0"
readme = "README.md"
publish = false

[workspace.dependencies]
bs58 = "0.5.0"
bytesize = "2.0.0"
bytesize-serde = "0.2.0"
clap = "4.0.0"
common_macros = "0.1.1"
derive_more = "2.0.0"
futures-util = "0.3.31"
rustc-hash = "2.0.0"
serde = "1.0.0"
serde_yaml = "0.9.34"
solana-clock = "2.0.0"
solana-commitment-config = "2.0.0"
solana-pubkey = "2.0.0"
solana-signature = "2.0.0"
solana-hash = "2.0.0"
thiserror = "2.0.0"
tokio = "1.0.0"
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
tonic = "0.14.0"
tracing = "0.1.0"
tracing-subscriber = "0.3.0"
yellowstone-grpc-client = { version = "9.0.0" }
yellowstone-grpc-proto = { version = "9.0.0" }
yellowstone-block-machine = { path = "crates/yellowstone-block-machine" }