[package]
name = "yellowstone-block-machine"
version = "0.1.0"
edition = "2024"

[features]
dragonsmouth = [
    "dep:yellowstone-grpc-client",
    "dep:yellowstone-grpc-proto",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:tokio-util",
    "tonic",
]
tonic = [
    "dep:tonic",
]

[dependencies]
bytesize = { workspace = true }
bytesize-serde = { workspace = true }
derive_more = { workspace = true, features = ["from", "into", "display"] }
futures-util = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true, features = ["rand"] }
solana-hash = { workspace = true, features = ["serde"]}
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["rt-multi-thread"]}
tokio-stream = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
yellowstone-grpc-client = { workspace = true, optional = true }
yellowstone-grpc-proto = { workspace = true, optional = true }
clap = "4.5.48"


[dev-dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
