[package]
name = "yellowstone-block-machine"
version = "0.1.0-rc13"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["solana", "yellowstone", "geyser"]
description = "State machine for reconstructing Solana blocks from Geyser events"
readme.workspace = true
publish = true

[features]
dragonsmouth = [
    "dragonsmouth-thin",
    "dep:yellowstone-grpc-client",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:tokio-util",
    "tonic",
]
dragonsmouth-thin = [
    "dep:yellowstone-grpc-proto",
    "yellowstone-grpc-client/account-data-as-bytes",
]
tonic = [
    "dep:tonic",
]

[dependencies]
bs58 = { workspace = true }
bytesize = { workspace = true }
bytesize-serde = { workspace = true }
derive_more = { workspace = true, features = ["from", "into", "display"] }
futures-util = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
solana-clock = { workspace = true }
solana-commitment-config = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true, features = ["rand"] }
solana-hash = { workspace = true, features = ["serde"]}
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["rt-multi-thread"]}
tokio-stream = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tonic = { workspace = true, optional = true, features = ["tls-ring", "tls-native-roots"]}
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
yellowstone-grpc-client = { workspace = true, optional = true }
yellowstone-grpc-proto = { workspace = true, optional = true }


[dev-dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
